<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="signup">SignUp</string>
    <string name="enter_registered_mobile_number">Enter registered Mobile Number to get OTP</string>
    <string name="already_have_account">Already have an account</string>
    <string name="get_otp">Get OTp</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_less_than_6">"Password cannot be less than 6 "</string>
    <string name="enter_valid_email_id">Enter valid Email id</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="enter_otp_sent_to">"Enter 4 digit OTP sent to "</string>
    <string name="from_forget">From Forget</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="new_password">New Password</string>
    <string name="set_password">Set Password</string>
    <string name="passwords_not_same">New password and Confirm password should be same.</string>
</resources>