<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ForgetPasswordFragment">

    <include
        layout="@layout/common_layout"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toTopOf="@+id/guideHorizontal10"
        app:layout_constraintBottom_toBottomOf="@+id/guideHorizontal35"/>

    <TextView
        style="@style/subTitle"
        android:id="@+id/lblForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_registered_mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMobileNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toTopOf="@+id/guideHorizontal50"
        app:layout_constraintBottom_toBottomOf="@+id/guideHorizontal50">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="@dimen/size_16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnOtp"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_otp"
        app:layout_constraintBottom_toTopOf="@+id/lblLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMobileNumber" />

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_4dp"
        android:text="@string/already_have_account"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvLogin"
        app:layout_constraintEnd_toStartOf="@+id/tvLogin"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="@dimen/margin_4dp"
        android:layout_marginBottom="@dimen/margin_4dp"
        style="@style/subTitle"
        app:layout_constraintStart_toEndOf="@+id/lblLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>