<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignupFragment">

    <include
        layout="@layout/common_layout"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toTopOf="@+id/guideHorizontal05"
        app:layout_constraintBottom_toBottomOf="@+id/guideHorizontal35"/>

    <TextView
        style="@style/titles"
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_margin="@dimen/margin_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toBottomOf="@+id/lblLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/size_16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toBottomOf="@+id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/size_16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMobileNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="@dimen/size_16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toBottomOf="@+id/tilMobileNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/size_16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginBottom="50dp"
        style="@style/btnStyle"
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
