<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NewPasswordFragment">
    <include
        layout="@layout/common_layout"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toTopOf="@+id/guideHorizontal05"
        app:layout_constraintBottom_toBottomOf="@+id/guideHorizontal35"/>

    <TextView
        style="@style/titles"
        android:id="@+id/lblNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:layout_margin="@dimen/margin_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toBottomOf="@+id/lblNewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/size_16sp"/>

    </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/guideVertical10"
        app:layout_constraintEnd_toEndOf="@+id/guideVertical90"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/size_16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginBottom="50dp"
        style="@style/btnStyle"
        android:id="@+id/btnSetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>